--- a/writing/paper1_visualvocab.Rmd
+++ b/writing/paper1_visualvocab.Rmd
@@ -26,7 +26,7 @@ tablelist         : no
 footnotelist      : no
 
 classoption       : "man"
-output            : papaja::apa6_pdf
+output            : papaja::apa6_docx
 ---
 
 ```{r setup, include = FALSE}
@@ -72,19 +72,19 @@ RAW_DATA=FALSE # if exterior to the research team
 ```
 
 # Introduction
-Across the world’s languages, many words refer to visible things in the environment (e.g. “thermos”, “prism”, “whale”). How precise are the visual representations that underlie children’s understanding of these words—children’s visual concepts? For example, depending on how old a child is (and how much they know about whales) a child might understand that the word whale refers to blue whales—but not whale sharks—or instead only know that a whale is a large animal that lives in the ocean.  Children’s acquisition of the boundaries of visual categories and how they map onto words is a key developmental process, as children who lag behind their peers in vocabulary learning are at increased risk for language delays with significant academic and social consequences (Rescorla & Dale, 2013).
+Across the world’s languages, many words refer to visible things in the environment (e.g. “thermos”, “prism”, “whale”). How precise are the visual representations that underlie children’s understanding of these words—children’s visual concepts? For example, depending on how old a child is (and how much they know about whales) a child might understand that the word whale refers to blue whales—but not whale sharks—or instead only know that a whale is a large animal that lives in the ocean.  Children’s acquisition of the boundaries of visual categories and how they map onto words is a key developmental process, as children who lag behind their peers in vocabulary learning are at increased risk for language delays with significant academic and social consequences [@rescorla_late_2013].
 
-Most empirical work on the precision of children’s visual concepts has focused on the first few years of life, when children learn words at an astonishing rate (Bloom, 2000; Braginsky et al., 2019). In looking-while-listening tasks (Fernald et al., 2008), infants as young as 6 months look to events associated with common nouns like “bottle” and “banana” (Bergelson & Aslin, 2017), and 14- to 18-month-olds extend newly learned words to atypical exemplars of these categories (Weaver, Zettersten, & Saffran, 2024). By around their second birthday, children also generalize nouns to stylized, 3D exemplars (Pereira & Smith, 2009) as they learn that shape is a valuable cue to basic-level category membership. In parallel, empirical work on children’s developing ability to recognize objects (Ayzenberg & Behrmann, 2024) has focused on these first few years of childhood as an important period of developmental change.
+Most empirical work on the precision of children’s visual concepts has focused on the first few years of life, when children learn words at an astonishing rate [@bloom_how_2000; @braginsky_consistency_2019]. In looking-while-listening tasks [@fernald2008looking], infants as young as 6 months look to events associated with common nouns like “bottle” and “banana” [@bergelson2017nature], and 14- to 18-month-olds extend newly learned words to atypical exemplars of these categories  [@weaver2024becoming]. By around their second birthday, children also generalize nouns to stylized, 3D exemplars [@pereira2009developmental] as they learn that shape is a valuable cue to basic-level category membership. In parallel, empirical work on children’s developing ability to recognize objects [@ayzenberg_development_2024] has focused on these first few years of childhood as an important period of developmental change.
 
 An implicit assumption underlying much of this research is that preschoolers and school-aged children’s visual concepts—e.g., their knowledge of what whales “look like” —may not change substantially after they can understand the word “whale” in conversations. On this account, children associate words (e.g., “whale”) with high-fidelity visual information about a particular exemplar (or a few) during learning, and this is sufficient for acquiring the visual concept. Instead, the enrichment for this concept is thought to happen solely at the level of semantics (e.g., “whales eat krill”); on this semantic enrichment hypothesis, later learning during the elementary school years does not influence the content of the visual concepts per se. 
 
-But these assumptions may be incorrect. Perhaps these visual concepts themselves undergo considerable and gradual change beyond the first few years of childhood. On this alternative view, in parallel with learning an increasingly rich semantic space of word meanings, children also develop an increasingly detailed representation of the diagnostic features of these visual concepts, and a better understanding of the boundaries of these visual categories. Indeed, classic theories have long articulated a view of this type, in which children might initially set up a place-holder concept via “fast mapping” but then gradually fill in later details (Carey & Bartlett, 1978; cf. Swingley, 2010; Dale, 1965). An example from this early work focused on a case where three-year-olds remembered that a word (“chromium”) was a color word, but they did not know which color it was.  Similarly, in foundational theories of vocabulary acquisition, children’s vocabulary knowledge has been thought of as progressing along stages (Dale, 1965; Beck et al., 1987), with an intermediate stage where children were thought to have a “vague knowledge of the word’s meaning” (Dale, 1965) before they fully grasp what a word means.  For example, there might be an intermediate phase in which children understand that “whales” are animals that live in the ocean, but have less precision on the visual features that distinguish them from fish and other sea mammals. 
+But these assumptions may be incorrect. Perhaps these visual concepts themselves undergo considerable and gradual change beyond the first few years of childhood. On this alternative view, in parallel with learning an increasingly rich semantic space of word meanings, children also develop an increasingly detailed representation of the diagnostic features of these visual concepts, and a better understanding of the boundaries of these visual categories. Indeed, classic theories have long articulated a view of this type, in which children might initially set up a place-holder concept via “fast mapping” but then gradually fill in later details [@carey1978acquiring; @swingley2010fast; @dale1965vocabulary]. An example from this early work focused on a case where three-year-olds remembered that a word (“chromium”) was a color word, but they did not know which color it was.  Similarly, in foundational theories of vocabulary acquisition, children’s vocabulary knowledge has been thought of as progressing along stages [@dale1965vocabulary], with an intermediate stage where children were thought to have a “vague knowledge of the word’s meaning” [@dale1965vocabulary] before they fully grasp what a word means.  For example, there might be an intermediate phase in which children understand that “whales” are animals that live in the ocean, but have less precision on the visual features that distinguish them from fish and other sea mammals. 
 
-Yet despite this long-standing recognition that children likely have partial word knowledge (Dale, 1965; Carey & Bartlett, 1978), all assessments of receptive vocabulary characterize word knowledge in an all-or-nothing fashion, perhaps because it is indeed difficult to quantify what it would mean to have a low-precision representation for a word (Dale, 1965; Carey & Bartlett, 1978). Both direct measures, such as the Peabody Picture Vocabulary Test (Dunn et al., 2003; Gershon et al., 2014), and parent-report measures of vocabulary knowledge (Braginsky et al., 2019) characterize children as either “knowing” a word or not. Since the distractors for these assessments are chosen carefully, children’s error patterns could in principle reveal evidence for partial knowledge (e.g., selecting a whale shark when the target word is whale), but the datasets resulting from these proprietary assessments are unavailable for re-analysis. 
+Yet despite this long-standing recognition that children likely have partial word knowledge [@carey1978acquiring; @dale1965vocabulary], all assessments of receptive vocabulary characterize word knowledge in an all-or-nothing fashion, perhaps because it is indeed difficult to quantify what it would mean to have a low-precision representation for a word. Both direct measures, such as the Peabody Picture Vocabulary Test [@dunn2003peabody; @gershon2014language], and parent-report measures of vocabulary knowledge  [@braginsky2019consistency] characterize children as either “knowing” a word or not. Since the distractors for these assessments are chosen carefully, children’s error patterns could in principle reveal evidence for partial knowledge (e.g., selecting a whale shark when the target word is whale), but the datasets resulting from these proprietary assessments are unavailable for re-analysis. 
 
-In parallel, a large literature on expertise suggests that visual learning almost certainly extends throughout early and middle childhood and into adulthood (for reviews, see Curby & Gauthier, 2005; Harel, 2016). Decades of empirical work has established that birding experts, car aficionados (Tanaka & Gauthier, 1997), and graphic artists (Perdreau & Cavanagh, 2013), among others, have both qualitatively and quantitatively different kinds of visual representations for the visual concepts that they have significant expertise with that is reflected in both behavioral and neural responses. Thus, on a visual expertise hypothesis, children’s visual concepts might continually be enriched throughout early and middle childhood. More recent developmental work supports this idea (Long et al, 2024): In a large observational study, children became increasingly able to both depict and recognize line drawings of visual concepts (e.g., “whale”, “clock”, “tiger”) from 3-10 years of age, hinting at underlying changes in how children represent the diagnostic features of these visual concepts. 
+In parallel, a large literature on expertise suggests that visual learning almost certainly extends throughout early and middle childhood and into adulthood [@harel2016special; @curby2010trained] Decades of empirical work has established that birding experts, car aficionados [@tanaka1997expertise], and graphic artists [@perdreau2013artist], among others, have both qualitatively and quantitatively different kinds of visual representations for the visual concepts that they have significant expertise with that is reflected in both behavioral and neural responses. Thus, on a visual expertise hypothesis, children’s visual concepts might continually be enriched throughout early and middle childhood. More recent developmental work supports this idea [@long2024parallel]: In a large observational study, children became increasingly able to both depict and recognize line drawings of visual concepts (e.g., “whale”, “clock”, “tiger”) from 3-10 years of age, hinting at underlying changes in how children represent the diagnostic features of these visual concepts. 
 
-Our theoretical accounts of visual concept development have thus been limited by (1) a need for larger developmental datasets with dense data on individual items and (2) the difficulty of systematically quantifying what it means to have a partial or imprecise representation of a visual concept. Here, we take steps to address both of these challenges. We created a new, open-source picture matching task and developed research partnerships with schools across the country in order to gather dense item data across a wide age range (3–14 years) from many children (N=3575 children, N=211 adults).  We built a new, open-source “visual vocabulary” task where children heard a word (e.g., “swordfish”) and had to choose a picture in order to teach aliens about their meanings. We then collected data from a large sample of representative children in both online contexts as well as through research-practice partnership with preschools and elementary school contexts across the U.S. Next, we leveraged modern computational models to choose distractor items systematically and to analyze children’s resulting responses. For each word we chose distractor items that varied in their linguistic similarity to the target word as operationalized via the similarity of the target and distractor words in the language encoder of a multimodal language model (Contrastive Language-Image Pre-training model, or CLIP; Radford et al., 2021), and we used embeddings from the visual encoder to model children’s error patterns. These advances in data and models thus allow us to quantify changes in the precision of children’s visual concepts across early and middle childhood for the first time.
+Our theoretical accounts of visual concept development have thus been limited by (1) a need for larger developmental datasets with dense data on individual items and (2) the difficulty of systematically quantifying what it means to have a partial or imprecise representation of a visual concept. Here, we take steps to address both of these challenges. We created a new, open-source picture matching task and developed research partnerships with schools across the country in order to gather dense item data across a wide age range (3–14 years) from many children (N=3575 children, N=211 adults).  We built a new, open-source “visual vocabulary” task where children heard a word (e.g., “swordfish”) and had to choose a picture in order to teach aliens about their meanings. We then collected data from a large sample of representative children in both online contexts as well as through research-practice partnership with preschools and elementary school contexts across the U.S. Next, we leveraged modern computational models to choose distractor items systematically and to analyze children’s resulting responses. For each word we chose distractor items that varied in their linguistic similarity to the target word as operationalized via the similarity of the target and distractor words in the language encoder of a multimodal language model (Contrastive Language-Image Pre-training model, or CLIP; [@radford2021learning]), and we used embeddings from the visual encoder to model children’s error patterns. These advances in data and models thus allow us to quantify changes in the precision of children’s visual concepts across early and middle childhood for the first time.
 
 With these data, we investigated three main questions. First, we examined whether we see evidence for continual learning of visual vocabulary knowledge throughout middle childhood (consistent with a visual expertise hypothesis) versus a plateau in performance in the elementary school years (consistent with a semantic enrichment hypothesis). Second, we examined evidence for changes in the precision of visual concepts before word knowledge is solidified, as per Dale (1965)’s account. If younger children's representations are initially overly broad, then we would expect younger children to select distractors of all types when they do not know a word’s exact meaning, and older children to almost exclusively choose high-similarity distractors (e.g., whale sharks); if children bypass this stage where they have lossy representations, then children should choose distractors randomly. Finally, we examined children’s error patterns: if changes in children’s error patterns are driven by their knowledge of what visual information “goes with the word”, then a combination of linguistic and visual similarity metrics should explain variance in children’s error patterns. In contrast, if children are primarily drawn to visually-similar distractors when they do not know a word’s meaning—irrespective of their linguistic similarity to the target word—then visual similarity alone should be a driving factor in children’s error patterns.  
 
@@ -155,7 +155,7 @@ All participants who contributed data and scored above chance (chance = 25%, thr
 We excluded an additional 84 participants who scored near chance on 4AFC trials (< 30% accurate) and were school-aged (>6 years of age); these participants completed an average of 17.72 trials.  
 
 ## Materials
-We capitalized on publicly available existing image and audio databases to generate trials. Visual concepts were taken from the THINGS+ dataset (Stoinski et al., 2023), after filtering out non-child safe images (e.g., weapons, cigarettes) and images with low-nameability (<.3), as per Stoinski et al., 2023. We used the copyright-free, high-quality image released for each visual concept. We subset to visual concepts that had available age-of-acquisition (AoA) ratings from a previous existing dataset (Kuperman et al., 2012) where adults were asked to retrospect on the age that they learned a word in development; these estimated AoAs were used as a proxy for item difficulty. Audio for each target word was taken from the MALD database (Tucker et al., 2019). 
+We capitalized on publicly available existing image and audio databases to generate trials. Visual concepts were taken from the THINGS+ dataset [@stoinski2024thingsplus], after filtering out non-child safe images (e.g., weapons, cigarettes) and images with low-nameability (<.3), as per Stoinski et al., 2023. We used the copyright-free, high-quality image released for each visual concept. We subset to visual concepts that had available age-of-acquisition (AoA) ratings from a previous existing dataset [@kuperman2012age] where adults were asked to retrospect on the age that they learned a word in development; these estimated AoAs were used as a proxy for item difficulty. Audio for each target word was taken from the MALD database [@tucker2019massive].
 
 We used these stimuli to create trials that contained a target image paired with distractor images of similar difficulty (estimated using AoA) and varying similarity (estimated using a computational model). To do so, we sampled distractors with high, medium, and low similarity to the target word as operationalized via the embedding similarity of the words in the language encoder of a multimodal large language model (Radford et al., 2021).We determined high-, medium-, and low-similarity values relative to the distribution of all possible target-distractor similarity values for each word in the THINGS+ dataset. Stimuli were selected to optimize for having a maximum number of trials with unique target and distractors; in addition, we constrained the sampling such that target-distractor pairs had estimated AoA within 3 years of each other. For each target word, we first selected a high-similarity distractor that had the highest cosine similarity to the target (and was itself not one of the target words). For low-similarity words, we sampled a unique distractor word that had the lowest cosine similarity among the remaining distractors. For medium-similarity distractors, we then randomly sampled a distractor word that was the same animacy as the target word, and unique to the dataset. In our final set, we had 108 items with a range of different estimated age-of-acquisitions (e.g., hedgehog, mandolin, mulch, swordfish, waterwheel, bobsled) with all unique targets and distractors.  All stimuli and their metadata are available on the public repository for this project (BLINDED). 
 	
@@ -330,7 +330,7 @@ high_slopes = item_effects %>%
 ```
 
 
-```{r slopes, out.width='50%', fig.align='center', fig.cap = "Visualization of the items that showed the greatest changes in distractor choice across age groups. Colors represent the age of the child participating in the task; triangles represent data from adults."}
+```{r slopes, out.width='50%', fig.align='center', fig.cap = "Visualization of top 30 items that showed the largest differences across age groups; values represent the proportion of correct responses on each target word (e.g., swordfish) within each age group. Triangles represent data from both English monolinguals and second-language learners collected via Prolific. Items are ordered by difficulty for adults."}
 
 ggplot(high_slopes %>% filter(age_group<25) , aes(x=fct_reorder(targetWord, adult_perc, .desc=FALSE), y=perc, col=age_group)) +
     geom_point(alpha=.5) +
@@ -599,7 +599,7 @@ target_item_visualize <- dist_by_4afc_by_item_by_age %>%
 
 ```
 
-```{r}
+```{r modelfigure, out.width='20%', fig.align='center', fig.cap = "(a) Schematic of the three different ways that embedding similarity was calculated in CLIP (Radford et al., 2021) as a function of the different distractor types." }
 ggplot(data = target_item_visualize, aes(x=sim_img_img, y=sim_txt_txt, col=wordPairing)) +
   geom_point(size=.5, alpha=.8) +
   theme(legend.position='none') +
@@ -616,6 +616,8 @@ ggplot(data = target_item_visualize, aes(x=sim_img_img, y=sim_txt_txt, col=wordP
   
 ggsave('figures/fig4b-similarity_by_item.pdf', width=2.5)
 ```
+
+
 
 
 
@@ -707,7 +709,6 @@ ggsave('figures/fig4c-model_comparison.pdf', height=3, units='in')
   
   
 ```
-
 
 
 
