--- a/writing/r-references.bib
+++ b/writing/r-references.bib
@@ -8,6 +8,50 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@article{rescorla2013late,
+  title={Late talkers},
+  author={Rescorla, Leslie and Dale, PH},
+  journal={Brookes, Baltimore. Late Talking Toddlers},
+  volume={6},
+  pages={219--240},
+  year={2013}
+}
+
+@article{stoinski2024thingsplus,
+  title={THINGSplus: New norms and metadata for the THINGS database of 1854 object concepts and 26,107 natural object images},
+  author={Stoinski, Laura M and Perkuhn, Jonas and Hebart, Martin N},
+  journal={Behavior Research Methods},
+  volume={56},
+  number={3},
+  pages={1583--1603},
+  year={2024},
+  publisher={Springer}
+}
+
+@article{tucker2019massive,
+  title={The massive auditory lexical decision (MALD) database},
+  author={Tucker, Benjamin V and Brenner, Daniel and Danielson, D Kyle and Kelley, Matthew C and Nenadi{\'c}, Filip and Sims, Michelle},
+  journal={Behavior research methods},
+  volume={51},
+  number={3},
+  pages={1187--1204},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{kuperman2012age,
+  title={Age-of-acquisition ratings for 30,000 English words},
+  author={Kuperman, Victor and Stadthagen-Gonzalez, Hans and Brysbaert, Marc},
+  journal={Behavior research methods},
+  volume={44},
+  number={4},
+  pages={978--990},
+  year={2012},
+  publisher={Springer}
+}
+
 @article{biederman1988surface,
   title={Surface versus edge-based determinants of visual recognition},
   author={Biederman, Irving and Ju, Ginny},
@@ -140,6 +184,27 @@
   pages={169--179},
   year={2007},
   publisher={Springer}
+}
+
+@article{perdreau2013artist,
+  title={The artist's advantage: Better integration of object information across eye movements},
+  author={Perdreau, Florian and Cavanagh, Patrick},
+  journal={i-Perception},
+  volume={4},
+  number={6},
+  pages={380--395},
+  year={2013},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{tanaka1997expertise,
+  title={Expertise in object and face recognition},
+  author={Tanaka, James and Gauthier, Isabel},
+  journal={Psychology of learning and motivation},
+  volume={36},
+  pages={85--126},
+  year={1997},
+  publisher={Academic Press}
 }
 
 @article{hochberg1962pictorial,
@@ -283,6 +348,7 @@
   pages={85--126},
   year={1997},
   publisher={Academic Press}
+
 }@article{braginsky2019consistency,
   title={Consistency and variability in children’s word learning across languages},
   author={Braginsky, Mika and Yurovsky, Daniel and Marchman, Virginia A and Frank, Michael C},
@@ -291,6 +357,27 @@
   pages={52--67},
   year={2019},
   publisher={MIT Press}
+}
+
+@article{harel2016special,
+  title={What is special about expertise? Visual expertise reveals the interactive nature of real-world object recognition},
+  author={Harel, Assaf},
+  journal={Neuropsychologia},
+  volume={83},
+  pages={88--99},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{curby2010trained,
+  title={To the trained eye: Perceptual expertise alters visual processing},
+  author={Curby, Kim M and Gauthier, Isabel},
+  journal={Topics in Cognitive Science},
+  volume={2},
+  number={2},
+  pages={189--201},
+  year={2010},
+  publisher={Wiley Online Library}
 }
 
 @article{chamberlain2021learning,
@@ -2083,6 +2170,17 @@ doi = {10.1080/0144341960160302}
 	pages = {3253--3258},
 }
 
+@article{swingley2010fast,
+  title={Fast mapping and slow mapping in children's word learning},
+  author={Swingley, Daniel},
+  journal={Language learning and Development},
+  volume={6},
+  number={3},
+  pages={179--183},
+  year={2010},
+  publisher={Taylor \& Francis}
+}
+
 @article{mcmurray_defusing_2007,
 	title = {Defusing the {Childhood} {Vocabulary} {Explosion}},
 	volume = {317},
@@ -3645,6 +3743,17 @@ doi = {10.1080/0144341960160302}
 	author = {Long, B. and Sanchez, A. and Agrawal, K. and Kraus, A. M. and Frank, M. C.},
 	year = {2022},
 	pages = {01--116.},
+}
+
+@article{dale1965vocabulary,
+  title={Vocabulary measurement: Techniques and major findings},
+  author={Dale, Edgar},
+  journal={Elementary english},
+  volume={42},
+  number={8},
+  pages={895--948},
+  year={1965},
+  publisher={JSTOR}
 }
 
 @article{long_parallel_2021,
